# aksyn-audio-prototype

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  build_log_ansi.txt  cmake_log.txt  vcpkg.json  vcpkg_log.txt
cpp/: aksyn_audio_common.cpp  aksyn_audio_common.h  audio_receiver.cpp  audio_sender.cpp  packet_demo.cpp
docs/: cpp_architecture.md  delay_budget.md  packet_engine.cpp
receiver/: receiver.py
results/: delay_log.csv
sender/: sender.py
tests/: convert_to_wav.py  generate_tone.py  validate.py
